# pyGRBz

./: .gitignore  .pep8speaks.yml  .travis.yml  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.md  README.rst  pytest.ini  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  load_GRB050904.txt  make.bat  usage.rst
notebooks/: Tuto_photoZ.ipynb
pyGRBz/: __init__.py  cli.py  constants.py  create_SED.py  extinction_correction.py  fitting.py  fluxes.py  fluxes_cy.pyx  formatting.py  io_grb.py  models.py  plotting.py  pyGRBz.py  utils.py
pyGRBz/data/lc/: GRB_lc_test.txt
pyGRBz/data/sed/: GRB050904.txt  GRB080825B.txt  GRB080906.txt  GRB080913.txt  GRB080913_2.txt  GRB080916C.txt  GRB081228.txt  GRB090423.txt  GRB090429B.txt  GRB090516.txt  GRB100518A.txt  GRB110721A.txt  GRB120712A.txt  GRB120922A.txt  GRB121201A.txt  GRB130215A.txt  GRB130327A.txt  GRB130408A.txt  GRB130514A.txt  GRB130606A.txt  GRB130606A_2.txt  GRB130907A.txt  GRB130925A.txt  GRB131117A.txt  GRB140311A.txt  GRB140311A2.txt  GRB140419A.txt  GRB140419A2.txt  GRB140515A.txt  GRB140518A.txt  GRB140614A.txt  GRB140703A.txt  GRB141109A.txt  GRB150120B.txt  GRB150910A.txt  GRB151027B.txt  GRB160203A.txt  GRB160327A.txt  GRB160327A_1d.txt  GRB160625B.txt
pyGRBz/transmissions/: filter_plt.py  multi_plot.py
pyGRBz/transmissions/cafos/: I.txt  R.txt
pyGRBz/transmissions/colibri/: H.txt  J.txt  g.txt  gri.txt  i.txt  r.txt  y.txt  z.txt  zy.txt
pyGRBz/transmissions/fors2/: B.txt  I.txt  R.txt  z.txt
pyGRBz/transmissions/gft/: g.txt  gri.txt  i.txt  r.txt  y.txt  zy.txt
pyGRBz/transmissions/gmos/: i.txt  z.txt
pyGRBz/transmissions/grond/: H.txt  J.txt  K.txt  g.txt  grond_filter_curves.txt  i.txt  r.txt  z.txt
pyGRBz/transmissions/grondtest/: J.txt  K.txt  g.txt  i.txt  r.txt  u.txt  z.txt
pyGRBz/transmissions/isaac/: H.txt  J.txt  Ks.txt
pyGRBz/transmissions/laica/: V.txt
pyGRBz/transmissions/mxt/: MXT1.txt  MXT2.txt  MXT3.txt
pyGRBz/transmissions/nics/: J.txt  J.txt.bk  test.txt
pyGRBz/transmissions/niri/: H.txt  J.txt  K.txt
pyGRBz/transmissions/ratir/: H.txt  J.txt  Y.txt  Z.txt  all_filtercurve.txt  g.txt  i.txt  info.txt  r.txt
tests/: test_pyGRBz.py
(+47 files in other folders)
