[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:pyGRBz/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[ah_bootstrap]
auto_use = True

[pycodestyle]
# E101 - mix of tabs and spaces
# W191 - use of tabs
# W291 - trailing whitespace
# W292 - no newline at end of file
# W293 - trailing whitespace
# W391 - blank line at end of file
# E111 - 4 spaces per indentation level
# E112 - 4 spaces per indentation level
# E113 - 4 spaces per indentation level
# E901 - SyntaxError or IndentationError
# E902 - IOError
select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902
exclude = extern,sphinx,*parsetab.py

#[aliases]
# Define setup.py command aliases here
#test = pytest

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings
collect_ignore = ['setup.py']


[metadata]
package_name = pyGRBz
description = Bayesian photometric code dedicated to Gamma-Ray Burst
long_description = Bayesian photometric code dedicated to Gamma-Ray Burst using affine-invariant Ensemble sampler and Parallel-Tempering Ensemble sampler of the python package emcee.
author = David Corre
author_email = david.corre.fr@gmail.com
license = MIT license
url = http://pygrbz.readthedocs.io/
edit_on_github = False
github_project = dcorre/pyGRBz
# install_requires should be formatted as a comma-separated list, e.g.:
#install_requires = astropy, scipy, matplotlib
#install_requires = numpy, scipy, matplotlib, astropy
install_requires = numpy, scipy, matplotlib, jupyter, astropy, iminuit, emcee, corner, sfdmap, extinction, hjson
# version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
version = 0.0.dev
# Note: you will also need to change this in your package's __init__.py
minimum_python_version = 3.5
